--- a/docs/english/20220311-1.md
+++ b/docs/english/20220311-1.md
@@ -20,10 +20,9 @@ lang: en-US
 
 > 信号增强
 
-### 文献 《CardioNet: An Efficient ECG Arrhythmia Classification System Using 
-Transfer Learning》
-
-迁移学习模型: DenseNet
+### 文献 《CardioNet: An Efficient ECG Arrhythmia Classification System Using Transfer Learning》
+1. 文章没有提及图像处理，只是一笔带过，生成二维图像
+2. 迁移学习模型: DenseNet
 
 
 ### 文献《ECG BIOMETRICS METHOD BASED ON CONVOLUTIONAL NEURAL NETWORK AND TRANSFER LEARNING 》
@@ -31,11 +30,12 @@ Transfer Learning》
 1. 对于轨迹图的处理:
    使用**递归图**将一维信号的时间序列转换为二维图像。 我们首先使用递归图进行维度转换，它显示了比原始时域更详细的时间和频率特性。 
 
-2. GoogLeNet
+2. 迁移学习模型: GoogLeNet
 
 ### 文献《A New Scheme for Trajectory Visualization》
 这篇文章讲述的轨迹类似于机器人行驶轨迹，虽然与波形图轨迹相差有点大，但文章提出了一种基于 HSV 颜色空间的轨迹可视化方案。
 
+其中 HSV 参考了速度、方向以及轨迹的聚类特征。
 
 
 ## DenseNet
