--- a/docs/english/20220311-3.md
+++ b/docs/english/20220311-3.md
@@ -7,7 +7,7 @@ lang: en-US
 + 作者: Liang Du, Member , IEEE, D a w e i H e , Student Member , IEEE, Ronald G. Harley, Fellow, IEEE, and Thomas G. Habetler, Fellow, IEEE
 + 关键词: Load classification, load identification, load signatures, nonintrusive load monitoring (NILM).
 ## 文章总结
-> 这篇文献是二值化映射的创始文献，这周本来想深入的体会一下二值化映射，但在二值化映射的最后一步卡住，导致后续没能理解。
+> 这篇文献是二值化映射的创始文献，这周本来想深入的体会一下二值化映射，但在二值化映射的最后一步卡住，导致后续越理解越怪。
 
 文献提出了一种新的计算效率高且准确的负荷分类特征。电压-电流轨迹先映射到单元网格中，每个单元分配一个二进制值，然后可以从映射的单元网格中提取简单且有效的特征。这些特征很容易与现有的负荷识别方法结合，形成完整的两部负荷识别器。
 
@@ -34,7 +34,7 @@ lang: en-US
 1. h 是什么? 文章中也没有交待
 2. 为什么从 (n+1, n+1) 开始计算?
 
-文章中还举了一个例子，与上文提到的公式 (v0+ v·(x−N), i0+ i·(y−N)) 不同，让人非常迷惑。
+文章中还举了一个例子，与上文提到的公式 (v0 + v(x−N), i0 + i(y−N)) 不同，让人捉摸不透。
 
 <template>
   <img :src="$withBase('/images/0311binary-example.png')" alt="叠加原理">
@@ -45,7 +45,6 @@ lang: en-US
 
 二值化映射优点: 除了减少同一类别内像素的 V–I 轨迹的方差外，将 V–I 轨迹映射到二元网格上还可以减少失真的影响，并保留图形特征。 
 
-
 ### 负荷识别
 文章指出: **对于每一类像素，可以根据两个关键单元和三条关键线从二进制单元网格直接识别一组新的签名**。文章并没有多解释这句话，也并没有注明来源。
 
@@ -55,4 +54,4 @@ lang: en-US
 
 文章举了个两个关键单元和三条关键线的例子，并指出 C1 为 0，C2 为 1
 
-**??? C2在图中也是白色点，为啥会判定为1**
+**C2在图中也是白色点，为啥会判定为1**
